Fixed sidebar nav-link items left aligned when the rest of items where center aligned in toggled mode

--- a/html/scss/navs/_sidebar.scss
+++ b/html/scss/navs/_sidebar.scss
@@ -299,7 +299,7 @@
                 &:last-child { margin-bottom: 1rem; }
 
                 .nav-link {
-                    text-align: center; padding: 0.75rem 1rem; width: $sidebar-collapsed-width;
+                    text-align: center; padding: 0.75rem 1rem;
                     span { font-size: 0.65rem; display: block; }
                     i { margin-right: 0; }
                     &[data-toggle="collapse"]::after { display: none; }
